# shao-mark6-utils

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md
include/: CMakeLists.txt  dplane.h  messages.h  mk5b.h  vdif.h  version.h
scripts/: CMakeLists.txt  README.md  shao_mark6_dethread_files.py  shao_mark6_gather_dethread_files.py  shao_mark6_gather_files.py  shao_mark6_list_files.py  shao_mark6_mount.sh  shao_mark6_umount.sh  shao_mark6_version.py  shao_mount_mark6.sh
src/: CMakeLists.txt  Makefile  dboss.c  dpstat.c  dqa.c  dspeed.c  gather.c  get_file_size.c  miscellany.c  scat_write.c  scatspeed.c  writer.c
